PROD-1164 - Fixed Toolbar spacing

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -921,7 +921,7 @@
 
 	.medium-editor-toolbar {
 		top: inherit;
-		bottom: 7px;
+		bottom: 9px;
 		left: 11px;
 		visibility: hidden;
 		z-index: 99;
@@ -1052,7 +1052,7 @@
 	.medium-editor-toolbar .medium-editor-toolbar-form-active {
 		position: absolute;
 		left: 15px;
-		bottom: 6px;
+		bottom: 5px;
 		box-shadow: none;
 		width: calc(800px - 40px);
 		max-width: calc(100vw - 55px - 10%);
